# Olio_ohjelmointi_tht

Viikko 5 tehtävä/Notifikaattori/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikko 6 tehtävä/Opiskelijajarjestelma/: CMakeLists.txt  main.cpp  student.cpp  student.h
